@@ -1,11 +1,0 @@
-distributed.net believes in the capability and potential of
-distributed computing. Their mission consists of three interdependent
-goals: development, deployment, and advocacy, to be pursued in the
-advancement of distributed computing.
-
-They advocate distributed computing, by encouraging global
-participation and contributions of processing power, bandwidth,
-and expertise; by providing a forum for discussion; and by raising
-awareness on the Internet and in the mainstream.
-
-Current Projects: RC5-72, and Optimal 25 Mark Golomb Rulers.
